syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

// CmdId: 124
// EnetChannelId: 0
// EnetIsReliable: true
message SetPlayerNameRsp {
	int32 retcode = 12;
	string nick_name = 6;
}
